# nb-unittest

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  run-tests.yaml
examples/: basics.ipynb  composable.ipynb  custom-templates.ipynb  customizing.ipynb  severity.ipynb  syntax.ipynb  test_lib.py  widgets.ipynb
nbtest/: __init__.py  analysis.py  cache.py  magic.py  tagcache.py  templ.py  transforms.py  unit.py
nbtest/templates/: assertion.html  base.html  fail.html  macros.html  missing.html  ok.html  result.html
notebooks/: examples.ipynb
src/nb_unittest/: analysis.py
src/nbtest/: analysis.py  tagcache.py  templ.py  unit.py
tests/: cache.ipynb  makefile  run.ipynb  syntax.ipynb  tagging.ipynb  testing.ipynb  testing_async.ipynb  widgets.ipynb
