[project]
name = "nbtest"
version = "0.5.0"
dependencies = [
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "jinja2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
