[project]
name = "nbtest"
version = "0.5.0"
requires-python = ">= 3.10"
dependencies = [
    "jinja2", 
    "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
