[project]
name = "nbtest"
authors = [
    {name = "Mike Matera", email = "michael.matera@cabrillo.edu"},
]
version = "0.7.0"
requires-python = ">= 3.10"
dependencies = [
    "jinja2", 
    "jupyterlab",
    "ipywidgets",
]

[tool.setuptools.package-data]
"nbtest.templates" = ["*.html"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
